--- a/CompL1/HelpForm.resx
+++ b/CompL1/HelpForm.resx
@@ -161,8 +161,29 @@
 Функция Выделить все
 На вкладке Правка выберите пункт Выделить все, на весь текст документа будет применено выделение
 
+Постановка задачи
+На вкладке Текст в пункте Постановка задачи содержится информация о задаче, решаемой в процессе написания данной программы
 
+Грамматика
+На вкладке Текст в пункте Грамматика находится список правил используемой грамматики
 
+Классификация грамматики
+На вкладке Текст в пункте Классификация грамматики содержится информация о класификации используемой грамматики
+
+Метод анализа
+На вкладке Текст в пункте Метод анализа содержится информация об используемом методе анализа
+
+Диагностика и нейтрализация ошибок
+На вкладке Текст в пункте Диагностика и нейтрализация ошибок содержится информация о методе, используемом для диагностики и нейтрализации ошибок
+
+Тестовый пример
+Тестовый пример находится в пункте Тестовый пример на вкладке Текст и содержит пример для анализа, не содержащий ошибок
+
+Список литературы
+На вкладке Текст в пункте Список литературы содержится список испозьзуемой в процессе разработки литературы
+
+Исходный код программы
+На вкладке Текст в пункте Исходный код программы находится ссылка на репозиторий Github, в котором находится исходный код программы
 </value>
   </data>
 </root>
